# pkt-parser

./: Cargo.toml  buf.json  buf2.json
src/: main.rs  test.rs
src/network/: mod.rs  packet.rs
src/network/login/: constants.rs  error.rs  login_verify.rs  mod.rs
src/player/: mod.rs
src/protocol/: compresstion.rs  mod.rs
src/protocol/login/: error.rs  mod.rs
src/protocol/packets/: login.rs  mod.rs  network_settings.rs  play_status.rs  request_network_settings.rs
src/protodef/: mcbe.rs  mod.rs  native_types.rs  reader.rs  writer.rs
