[package]
name = "bedrock_project_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-raknet = "*"
tokio = {version = "1.20.1", features = ["full"]}
flate2 = "1.0"
byteorder = "1"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0"