[package]
name = "bedrock_project_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-raknet = "*"
tokio = {version = "1.20.1", features = ["full"]}
flate2 = "1.0"
base64 = "0.13.1"
byteorder = "1"
jwt-simple = "0.11.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.69"
thiserror = "1.0"